Fix loading swatchbook CMYK palettes

And add a unittest for that

BUG:474583